--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <router-outlet></router-outlet>
+<div class="form" [formGroup]="form">
+  <outlined-text-field label="First Name" formControlName="firstname"/>
+</div>
